k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: $NAMESPACE
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
